--- a/style.css
+++ b/style.css
@@ -41,12 +41,39 @@ section{
     align-items: center;
     border: 6px rgba(8, 8, 8, 0.363);
 }
+/* pic modification */
 section img{
+    display: flex;
+    justify-content: space-between;
+}
+.profile-pic{
     height: 45vh;
     width: 45vh;
-    margin-top: 0%;
+    margin-top: -25%;
     margin-left: 0.5%;
 }
+.github-icon{
+    height: 5vh;
+    width: 5vh;
+    margin-top: 5%;
+    margin-left: -10%;
+    transition: transform .2s; 
+}
+.linkedin-icon{
+    height: 5vh;
+    width: 5vh;
+    margin-top: 5%;
+    margin-left: -7%;
+    transition: transform .2s;
+}
+.linkedin-icon:hover {
+    transform: scale(1.5);
+}
+.github-icon:hover{
+    transform: scale(1.5);
+}
+
+/* end pic modification */
 section h2{
     font-size: 5rem;
     color: rgb(0, 10, 5);
