--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     font-family: sans-serif;
 }
 header {
-    /* box-shadow: 0px, 3px, 10px, rgba(0,0,0,0.3); */
+    box-shadow: 0px, 3px, 10px, rgba(0,0,0,0.3);
     position: sticky;
     top: 0px;
     background: rgb(222, 236, 240);
@@ -37,76 +37,149 @@ nav a{
 }
 section{
     min-height: 100vh;
-    display: flex;
-    align-items: center;
     border: 6px rgba(8, 8, 8, 0.363);
 }
-/* pic modification */
-section img{
+section ul{
+    list-style: none;
     display: flex;
     justify-content: space-between;
 }
-.profile-pic{
+section a{
+    text-decoration: none;
+    transition: all 0.5s ease;
+    justify-content: space-between;
+    font-size: 13px;
+}
+section a:hover{
+    transform: scale(1.5);
+    opacity: 0.5;
+}
+/* rows and column */
+.leftside{
+    float: left;
+    width: 40%;
+    height:100vh;
+    margin: 0;
+    background: #f0f7fa;
+    text-align: center;
+}
+.rightside{
+    float: left;
+    width: 60%;
+    height:100vh;
+    background: #f0f7fa;
+    text-align: center;
+
+}
+/* rows and column */
+
+/* icons and intro */
+.intro{
+    float: top;
+    text-align: center;
+    width: 100%;
+    height:50vh;
+    background: #f0f7fa;
+    /* display: inline-block  */
+}
+.icones{
+    /* float: top; */
+    text-align: center;
+    align-items: center;
+    width: 40%;
+    height:10vh;
+    justify-content: space-between;
+    justify-self: center;
+    display: inline-block;
+    background: #f0f7fa;
+    
+}
+/* icons and intro */
+
+/* pic modification */
+  .profile-pic{
     height: 45vh;
     width: 45vh;
-    margin-top: -25vmin;
-    margin-left: 5vmin;
-}
+    margin-top: 20%;
+    margin-left: 20%;
+    display: flex;
+  }
 .github-icon{
-    height: 5vh;
-    width: 5vh;
-    margin-top: 0vmin;
-    margin-left: 0vmin;
+    height: 4vh;
+    width: 4vh;
+    /* margin-top: 0%;
+    margin-left: 0%; */
     transition: transform .2s; 
 }
-.linkedin-icon{
-    height: 5vh;
-    width: 5vh;
-    margin-top: 0vmin;
-    margin-left: 0vmin;
+ .linkedin-icon{
+    height: 4vh;
+    width: 4vh;
+    /* margin-top: 0%;
+    margin-left: 0%; */
     transition: transform .2s;
 }
-.linkedin-icon:hover {
+.email-icon{
+    height: 4vh;
+    width: 4vh;
+    /* margin-top: 0%;
+    margin-left: 0%; */
+    transition: transform .2s;   
+}
+.pdf-icon{
+    height: 4vh;
+    width: 3vh;
+    /* margin-top: 0%;
+    margin-left: 0%; */
+    transition: transform .2s;
+}
+
+/* .linkedin-icon:hover {
     transform: scale(1.5);
+    opacity: 0.5;
 }
 .github-icon:hover{
     transform: scale(1.5);
+    opacity: 0.5;
 }
-
+.pdf-icon:hover{
+    transform: scale(1.5);
+    opacity: 0.5;
+}
+.email-icon:hover{
+    transform: scale(1.5);
+    opacity: 0.5;
+} */
+/* .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  } */
 /* end pic modification */
 section h2{
     font-size: 5rem;
     color: rgb(0, 10, 5);
-    /*margin-top: -6em;
-    margin-left: -11em;*/
-    text-align: initial;
+    text-align: center;
 
 }
 section p{
     color: black;
 } 
-
-.home{
+.home {
     margin: 1px 0px 1px 0px;
-    /* background: linear-gradient(to right top, #043535, #024e3b); */
     background: #f0f7fa;
 }
 .project{
     margin: 1px 0px 1px 0px;
-    /* background: linear-gradient(to right top,  #043535, #024e3b); */
     background: #f0f7fa;
 }
 .resume{
     margin: 1px 0px 1px 0px;
-    /* background: linear-gradient(to right top,  #043535, #024e3b); */
     background: #f0f7fa;
 }
 .contact{
     margin: 1px 0px 1px 0px;
-    /* background: linear-gradient(to right top, #043535, #024e3b); */
     background: #f0f7fa;
 }
-
 .jumper{
     position: absolute;
     z-index: -2;
