--- a/style.css
+++ b/style.css
@@ -59,7 +59,6 @@ section a:hover{
     float: left;
     width: 40%;
     height:100vh;
-    margin: 0;
     background: #f0f7fa;
     text-align: center;
 }
@@ -69,9 +68,32 @@ section a:hover{
     height:100vh;
     background: #f0f7fa;
     text-align: center;
-
 }
 /* rows and column */
+.hello {
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-background-clip: text;
+    -moz-text-fill-color: transparent;
+    -ms-background-clip: text;
+    -ms-text-fill-color: transparent;
+    background-clip: text;
+    background-image: linear-gradient(45deg, 
+                      #3057e2, 
+                      rgb(4, 1, 7),
+                      rgb(12, 0, 4),
+                      rgb(15, 15, 2));
+    animation: 1s shake infinite alternate;
+  }
+  
+  @keyframes shake {
+    0% { transform: skewX(-15deg); }
+    5% { transform: skewX(15deg); }
+    10% { transform: skewX(-15deg); }
+    15% { transform: skewX(15deg); }
+    20% { transform: skewX(0deg); }
+    100% { transform: skewX(0deg); }  
+  }
 
 /* icons and intro */
 .intro{
@@ -98,8 +120,8 @@ section a:hover{
 
 /* pic modification */
   .profile-pic{
-    height: 45vh;
-    width: 45vh;
+    max-height: 45vh;
+    width: auto;
     margin-top: 20%;
     margin-left: 20%;
     display: flex;
