--- a/style.css
+++ b/style.css
@@ -54,19 +54,36 @@ section a:hover{
     transform: scale(1.5);
     opacity: 0.5;
 }
+section p{
+    color: black;
+    font-size: large;
+    line-height: 1.6;
+    text-align: justify;
+    text-justify: inter-ideograph;
+} 
+.home {
+    margin: 1px 0px 1px 0px;
+    background: white;
+}
 /* rows and column */
 .leftside{
     float: left;
     width: 40%;
     height:100vh;
-    background: #f0f7fa;
+    /* background: #f0f7fa; */
     text-align: center;
 }
 .rightside{
     float: left;
-    width: 60%;
+    width: 50%;
     height:100vh;
-    background: #f0f7fa;
+    /* background: #f0f7fa; */
+    text-align: center;
+}
+.far-rightside{
+    float: left;
+    width: 10%;
+    height:100vh;
     text-align: center;
 }
 /* rows and column */
@@ -79,11 +96,7 @@ section a:hover{
     -ms-background-clip: text;
     -ms-text-fill-color: transparent;
     background-clip: text;
-    background-image: linear-gradient(45deg, 
-                      #3057e2, 
-                      rgb(4, 1, 7),
-                      rgb(12, 0, 4),
-                      rgb(15, 15, 2));
+    background-image: linear-gradient(45deg, #0f42fa, #041968, #030c30, #01051f);
     animation: .8s shake infinite alternate;
   }
   
@@ -101,21 +114,18 @@ section a:hover{
     float: top;
     text-align: center;
     width: 100%;
-    height:50vh;
-    background: #f0f7fa;
+    height:60vh;
     /* display: inline-block  */
 }
 .icones{
     /* float: top; */
     text-align: center;
     align-items: center;
-    width: 40%;
+    min-width: 40%;
     height:10vh;
     justify-content: space-between;
     justify-self: center;
-    display: inline-block;
-    background: #f0f7fa;
-    
+    display: inline-block;  
 }
 /* icons and intro */
 
@@ -130,53 +140,23 @@ section a:hover{
 .github-icon{
     height: 4vh;
     width: 4vh;
-    /* margin-top: 0%;
-    margin-left: 0%; */
     transition: transform .2s; 
 }
  .linkedin-icon{
     height: 4vh;
     width: 4vh;
-    /* margin-top: 0%;
-    margin-left: 0%; */
     transition: transform .2s;
 }
 .email-icon{
     height: 4vh;
     width: 4vh;
-    /* margin-top: 0%;
-    margin-left: 0%; */
     transition: transform .2s;   
 }
 .pdf-icon{
     height: 4vh;
     width: 3vh;
-    /* margin-top: 0%;
-    margin-left: 0%; */
     transition: transform .2s;
 }
-
-/* .linkedin-icon:hover {
-    transform: scale(1.5);
-    opacity: 0.5;
-}
-.github-icon:hover{
-    transform: scale(1.5);
-    opacity: 0.5;
-}
-.pdf-icon:hover{
-    transform: scale(1.5);
-    opacity: 0.5;
-}
-.email-icon:hover{
-    transform: scale(1.5);
-    opacity: 0.5;
-} */
-/* .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  } */
 /* end pic modification */
 section h2{
     font-size: 5rem;
@@ -184,13 +164,7 @@ section h2{
     text-align: center;
 
 }
-section p{
-    color: black;
-} 
-.home {
-    margin: 1px 0px 1px 0px;
-    background: #f0f7fa;
-}
+
 /* .project{
     margin: 1px 0px 1px 0px;
     background: #f0f7fa;
