--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ section p{
 }
 /* rows and column */
 .hello {
+    display: inline-block;
     font-style: unset;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -96,7 +97,7 @@ section p{
     -ms-background-clip: text;
     -ms-text-fill-color: transparent;
     background-clip: text;
-    background-image: linear-gradient(45deg, #0f42fa, #041968, #030c30, #384cc0);
+    background-image: linear-gradient(45deg, #012136, #013b61, #034977, #0268ac);
     animation: .8s shake infinite alternate;
   }
   @keyframes shake {
@@ -113,8 +114,8 @@ section p{
     float: top;
     text-align: center;
     width: 100%;
-    height:60vh;
-    /* display: inline-block  */
+    height:100vh;
+    /* background-color: aqua; */
 }
 .icones{
     /* float: top; */
@@ -124,13 +125,14 @@ section p{
     height:10vh;
     justify-content: space-between;
     justify-self: center;
-    display: inline-block;  
+    display: inline-block; 
+    /* background-color: #0f42fa;  */
 }
 /* icons and intro */
 
 /* pic modification */
   .profile-pic{
-    max-width: 50%;
+    max-width: 52%;
     height: auto;
     margin-top: 30%;
     margin-left: 30%;
@@ -158,7 +160,7 @@ section p{
 }
 /* end pic modification */
 section h2{
-    font-size: 5rem;
+    display: inline-block;
     color: rgb(0, 10, 5);
     text-align: center;
 
